--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>POS & Bookkeeping</title>
+    <title>PWA Inventory & Bookkeeping</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Chart.js CDN -->
@@ -50,7 +50,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center">
-                    <span class="text-xl font-bold text-white tracking-wider">BookKeep</span>
+                    <span class="text-xl font-bold text-white tracking-wider">BookKeep Pro</span>
                 </div>
                 <nav class="flex space-x-2 sm:space-x-4">
                     <button class="nav-button p-2 rounded-lg text-white font-medium bg-primary hover:bg-indigo-600 transition duration-150" data-view="sales">Cash Register</button>
@@ -1133,7 +1133,8 @@
                     view.classList.remove('active-view');
                 });
                 const targetView = $(`${newView}-view`);
-                targetView.classList.remove('hidden');
+                // FIX: Ensure the 'hidden' class is removed before attempting to use the view.
+                targetView.classList.remove('hidden'); 
                 targetView.classList.add('active-view');
                 state.currentView = newView;
 
