--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <select id="stats-period" class="w-full p-3 border rounded-lg focus:ring-primary focus:border-primary">
                         <option value="daily">Daily</option>
                         <option value="weekly">Weekly</option>
-                        <option value="monthly">Monthly</option>
+                        <option value="monthly" selected>Monthly</option> <!-- CHANGED default to Monthly -->
                         <option value="all">All Time</option>
                     </select>
                 </div>
